--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,16 +18,27 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
+  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
     rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  .icon-youtube path:hover {
+    fill: #ff3535;
+    cursor: pointer;
+  }
+
+  .icon-twitter path:hover {
+    fill: #3a94e7;
+    cursor: pointer;
+  }
+
+  .icon-instagram path:hover {
+    fill: #8a43ff;
+    cursor: pointer;
   }
 }
